--- a/.github/workflows/OpenWrt-R23.7.7-内核5.15自用版.yml
+++ b/.github/workflows/OpenWrt-R23.7.7-内核5.15自用版.yml
@@ -172,7 +172,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       with:
-        name: ${{ env.FILE_TIME }} -内核5.15自用版
+        name: ${{ env.FILE_TIME }} -R23.7.7-内核5.15自用版
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/* 
