--- a/.github/workflows/OpenWrt-R23.7.7-内核6.1自用版.yml
+++ b/.github/workflows/OpenWrt-R23.7.7-内核6.1自用版.yml
@@ -152,7 +152,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt-Mini${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        name: OpenWrt-${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
 
     - name: 创建发布标签
