--- a/.github/workflows/OpenWrt-内核6.1自用版.yml
+++ b/.github/workflows/OpenWrt-内核6.1自用版.yml
@@ -159,7 +159,7 @@ jobs:
       run: |
         echo "release_tag=${{ env.TAG_TIME }}" >> $GITHUB_OUTPUT
         touch release.txt
-        echo "OpenWr-内核6.1自用版" >> release.txt
+        echo "OpenWrt-内核6.1自用版" >> release.txt
         echo "默认地址：192.168.0.111" >> release.txt
         echo "默认密码：无密码" >> release.txt
         echo "插件清单：ShadowSocksR Plus+，PassWall，OpenClash" >> release.txt
